# bluedroid

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
