[package]
name = "bluedroid"
version = "0.3.8"
edition = "2021"
license = "MIT"
description = "A wrapper for the ESP32 Bluedroid Bluetooth stack."
repository = "https://github.com/thedevleon/bluedroid"
keywords = ["bluetooth", "bluedroid", "esp32", "embedded", "ble"]
categories = ["embedded", "hardware-support"]
readme = "README.md"
documentation = "https://docs.rs/bluedroid"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>", "thedevleon"]

exclude = [".embuild", ".idea", ".vscode", "target", "Cargo.lock"]

[package.metadata.espflash]
partition_table = "partitions.csv"

[features]
default = ["all", "hal", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
esp-idf-sys = { version = "0.33.2", default-features = false }
esp-idf-hal = { version = "0.41.2", optional = true, default-features = false }
esp-idf-svc = { version = "0.46.2", optional = true, default-features = false }
embedded-svc = { version = "0.25.3", optional = true, default-features = false }
log = { version = "0.4.17", default-features = false }
lazy_static = { version = "1.4.0" }

[build-dependencies]
embuild = { version = "0.31.2" }
anyhow = { version = "1" }

[dev-dependencies]
anyhow = { version = "1" }
esp-idf-sys = { version = "0.33", features = ["native", "binstart"] }

[[example]]
name = "server"
required-features = ["esp-idf-sys/binstart"]

[profile.release]
strip = true
opt-level = "z"
lto = true
